--- a/app.json
+++ b/app.json
@@ -17,10 +17,9 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      "supportsTablet": false,
+      "bundleIdentifier": "cc.onen.calculator",
+      "buildNumber": "1.0.0"
     },
     "description": "My first React Native project - a simple calculator.",
     "githubUrl": "https://github.com/just1ngray/react-native-calculator"
